[gd_scene load_steps=2 format=3 uid="uid://paeyf6813o62"]

[ext_resource type="Script" uid="uid://dpajkbm5wc6mh" path="res://Demo/ENetStunTurnTest/ENetStunTurnTestMain.gd" id="1_twnv4"]

[node name="Main" type="Node"]
script = ExtResource("1_twnv4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Punch" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -15.5
offset_right = 28.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Star Server"

[node name="Connect" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -95.5
offset_right = 31.0
offset_bottom = -64.5
grow_horizontal = 2
grow_vertical = 2
text = "Conect"

[node name="ConnectionCode" type="LineEdit" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -136.0
offset_right = 99.0
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Connection Code"
alignment = 1

[connection signal="pressed" from="Control/Punch" to="." method="_on_punch_pressed"]
[connection signal="pressed" from="Control/Connect" to="." method="_on_connect_pressed"]
